[package]
name = "eir"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["defmt", "arch-cortex-m", "integrated-timers", "nightly", "executor-thread", "executor-interrupt"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl" ]  }
embassy-usb = { version = "0.2.0", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.3"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = { version = "2.0", features = ["nightly"]}
portable-atomic = { version = "1.5", features = ["critical-section"] }
microros-sys = { path="../microros-sys" }

# smartleds
smart-leds = "0.3.0"
fixed               = "1.23.1"
fixed-macro         = "1.2"
pio                 = "0.2.1"
pio-proc            = "0.2"

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

